[package]
name = "macro_colors"
version = "0.1.0"
edition = "2021"
description = "A crate for colorful printing macros."
license = "MIT"
repository = "https://github.com/Phant80m/macro-colors/"
readme = "README.md"
keywords = ["color", "printing", "macros"]
categories = ["text-processing"]
authors = ["Nicholas Samuels noreply@mail.com"]
exclude = [
    "/src/main.rs",
]

[dependencies]


